--- a/css/travel.css
+++ b/css/travel.css
@@ -1,21 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 body{
-  background-color: #D6D9CE;
+  background-color: #3d405b;
   padding: 0px;
   margin: 0px;
-}
-
-.aboutme {
-  font-family: 'Bebas Neue', cursive;
-  font-size: 20px;
-  font-weight: 100;
-  margin-left: 20vw;
-  margin-top: 50px;
-}
-
-.container {
-    display: block;
-    width: 84vw;
 }
 
 .content-bar{
@@ -51,6 +38,7 @@ body{
   width: 100%;
 }
 
+
 .intro{
   padding-left: 10vw;
   padding-top: 20vh;
@@ -58,6 +46,9 @@ body{
 }
 
 .intro p {
+  background-image: url(../images/chatbubble.png);
+  background-size: auto;
+  background-repeat: no-repeat;
   padding: 0px;
   margin: 0px;
   font-size: 20px;
@@ -68,22 +59,44 @@ body{
   margin: 0px;
   padding: 0px;
   font-size: 100px;
-  font-weight: 200;
-  border-right: solid 3px rgba(0,0,0,.75);
-  overflow: hidden;
-  white-space: nowrap;
-  animation: animated-text 0.8s steps(11,end) 1s 1 normal both,
-             animated-cursor 600ms steps(11,end) infinite;
+  font-weight: 200;  
 }
 
-/* text animation */
-@keyframes animated-text{
-  from{width: 0;}
-  to{width: 305px;}
+.container {
+    display: block;
+    width: 84vw;
 }
 
-/* cursor animations */
-@keyframes animated-cursor{
-  from{border-right-color: rgba(0,0,0,.75);}
-  to{border-right-color: transparent;}
+.places {
+    padding-left: 10vw;
+    padding-right: 5vw; 
+}
+
+.place {
+    font-family: "DejaVu Sans Mono", monospace;
+    padding: 0px; 
+    margin: 50px;
+    font-size: 35px;
+    display: inline-block;
+    text-align: center;
+}
+
+.place:hover{
+    border-width: 3px;
+    border-color: #000;
+    border-style: solid;
+    margin: 47px;
+}
+
+.place img {
+    height: 200px;
+    width: 200px;
+    border-radius: 100px;
+    margin: 20px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.place p {
+    margin: 0px;
 }
